# agentic-ray

./: .gitignore  CLAUDE.md  README.md  blog_draft.md  blog_draft_v2.md  pyproject.toml  token_efficient_agent_example.md
agentic_ray/: CLAUDE.md
agentic_ray/agentic/: CLAUDE.md
agentic_ray/core/: CLAUDE.md
agentic_ray/examples/: CLAUDE.md
agentic_ray/pipelines/: CLAUDE.md
agentic_ray/prompts/: CLAUDE.md
agentic_ray/test_pipelines/: CLAUDE.md
agentic_ray/utils/: CLAUDE.md
docs/: docs.json  index.mdx  quickstart.mdx
docs/frameworks/: build-from-scratch.mdx  langchain.mdx  pure-python.mdx  pydantic.mdx
docs/runtime/: agents.mdx  mcp.mdx  serving.mdx  tools.mdx
docs/tools/native/: batch.mdx
examples/: CLAUDE.md
examples/analyzer/: CLAUDE.md  mcp_serve.py
examples/analyzer/servers/: __init__.py  mcp_client.py
examples/finance_agent/: README.md
examples/pr_review_agent/: .env.example
examples/weather_agent/: .env.example  CLAUDE.md  README.md  pyproject.toml
examples/weather_agent/agents/weather/: __init__.py  agent.py  tools.py
src/ray_agents/: __init__.py  base.py  batch.py  session.py
src/ray_agents/adapters/: __init__.py  (+4 more)
src/rayai/: CLAUDE.md  __init__.py  agent_base.py  batch.py  decorators.py  resource_parser.py  serve.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_adapters.py  test_batch_tool.py  test_code_interpreter.py  test_deploy_cli.py  test_integration.py  test_resource_parser.py  test_session_basics.py  test_session_history.py  test_session_tools.py  test_tool_adapters.py  test_tool_decorator.py
tools/: CLAUDE.md
(+50 files in other folders)
