[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-agents"
version = "0.1.0"
description = "Experimental API to run LLM Agents (LangGraph, CrewAI, etc.) on Ray"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "ray>=2.49.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]
